# gamatrix-cli

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/gamatrixcli/: __main__.py  config.py  constants.py
src/gamatrixcli/gamatrixlib/: config.py  datastore.py  rawdb.py
src/gamatrixcli/gamatrixlib/impl/: gogdb.py
test/: test_gamatrix_cli.py
